Ya con un login pero ya funciona hay conectividad entre angular y laravel para revisar el logueo visto

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,10 +26,17 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets/"
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "server": "src/main.server.ts",
@@ -89,7 +96,13 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "/"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets/"
               }
             ],
             "styles": [
@@ -99,5 +112,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "3be9d9db-fae4-4de1-a85e-28454b48fc4c"
   }
 }
