--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -40,6 +40,9 @@
               "src/assets/css/styles.css",
               "src/styles.scss"
             ],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
