añadiendo los cambios para cobros se avanzo en efectivo

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,4 +1,5 @@
 *.log
+*.pem
 .DS_Store
 .env
 .env.backup
@@ -19,24 +20,9 @@
 /storage/*.key
 /storage/pail
 /vendor
+/sga_refs
+/certificados
 Homestead.json
 Homestead.yaml
 Thumbs.db
 
-/app/third_party/mycertificado.pem
-/app/third_party/mycertificado.pem.pruba_actual
-/app/third_party/mycertificado.pem.ant
-/app/third_party/mycertificado.pem.prueba
-/app/third_party/mycertificado.pem.real
-/app/third_party/mycertificado.off.pem
-
-/app/third_party/private.off.pem
-
-/app/third_party/private no corresponde.pem
-/app/third_party/private.pem
-/app/third_party/private.pem.ant
-/app/third_party/private.pem.prueba
-/app/third_party/private.pem.prueba_actual
-/app/third_party/private.pem.real
-/app/third_party/*.pem
-/app/third_party/**
