--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -28,6 +28,7 @@ server {
         fastcgi_pass angular_laravel_php:9000;  # ← Cambiado al nombre correcto
         fastcgi_index index.php;
         include fastcgi_params;
+        fastcgi_param HTTP_AUTHORIZATION $http_authorization;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
