agrenado el workerman y funcionando segun las pruebas siguiente paso integracion con angular

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,10 @@ services:
     container_name: angular_laravel_php
     networks:
       - angular_laravel_network
-    
+    ports:
+      - "8068:8068"
+    environment:
+      - WS_ADDRESS=0.0.0.0:8069
   # Nginx
   angular_laravel_server:
     build:
