--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -38,4 +38,13 @@ server {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
+    location /ws {
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+    proxy_read_timeout 3600s;
+    proxy_send_timeout 3600s;
+    proxy_pass http://angular_laravel_php:8069;
+}
 }
