ya esta integrado el workerman con el socket ahora falta la implementacion en el sistema de estudiantes

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,9 @@ server {
     server_name localhost;
     root /var/www/html/public;
 
+    # CSP de desarrollo: permitir conexiones a WebSocket (ws/wss) y http/https en connect-src
+    add_header Content-Security-Policy "default-src 'self'; connect-src 'self' http: https: ws: wss:; font-src 'self' data: https:; img-src 'self' data:; style-src 'self' 'unsafe-inline' https:; script-src 'self' 'unsafe-inline'" always;
+
     # API routes - Laravel backend
     location /api {
         try_files $uri $uri/ /index.php?$query_string;
