--- a/src/composer.json
+++ b/src/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "textalk/websocket": "^1.5",
-        "workerman/workerman": "^4.1"
+        "workerman/workerman": "^4.1",
+        "robrichards/xmlseclibs": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
