--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,8 @@
     "@angular/ssr": "^20.2.0",
     "bootstrap": "^5.3.3",
     "express": "^5.1.0",
+    "jspdf": "^3.0.4",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -43,6 +45,7 @@
     "@angular/compiler-cli": "^20.2.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.5",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
@@ -52,5 +55,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.9.2",
     "yargs": "^17.7.2"
+  },
+  "overrides": {
+    "vite": "^7.2.0"
   }
 }
