--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,7 +107,7 @@ services:
       - "4200:4200"
     environment:
       - NODE_ENV=development
-    command: sh -c "npm install && npm start -- --host 0.0.0.0 --port 4200"
+    command: sh -c "npm install --legacy-peer-deps && npx ng serve --host 0.0.0.0 --port 4200 --live-reload --poll 500"
     networks:
       - angular_laravel_network
 
