--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -42,12 +42,7 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-            ],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            ]
           },
           "configurations": {
             "production": {
@@ -77,6 +72,11 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "liveReload": true,
+            "watch": true,
+            "open": false
+          },
           "configurations": {
             "production": {
               "buildTarget": "frontend:build:production"
