--- a/src/config/app.php.sample
+++ b/src/config/app.php.sample
@@ -63,7 +63,8 @@ return [
     |
     */
 
-    'url' => env('APP_URL', 'http://192.168.0.78'),
+    'url' => env('APP_URL', 'http://192.168.0.74'),
+
 
     /*
     |--------------------------------------------------------------------------
@@ -76,7 +77,7 @@ return [
     |
     */
 
-    'timezone' => 'UTC',
+    'timezone' => 'America/La_Paz',
 
     /*
     |--------------------------------------------------------------------------
@@ -89,11 +90,11 @@ return [
     |
     */
 
-    'locale' => env('APP_LOCALE', 'en'),
+    'locale' => env('APP_LOCALE', 'es'),
 
-    'fallback_locale' => env('APP_FALLBACK_LOCALE', 'en'),
+    'fallback_locale' => env('APP_FALLBACK_LOCALE', 'es'),
 
-    'faker_locale' => env('APP_FAKER_LOCALE', 'en_US'),
+    'faker_locale' => env('APP_FAKER_LOCALE', 'es_ES'),
 
     /*
     |--------------------------------------------------------------------------
