--- a/src/.env.example
+++ b/src/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=angular_laravel_mysql
+DB_PORT=3306
+DB_DATABASE=angular_laravel_project
+DB_USERNAME=user1
+DB_PASSWORD=user1.pa55
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -35,17 +35,16 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_CLIENT=phpredis
+REDIS_PASSWORD=null
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
@@ -64,6 +63,14 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+
+
+
+
+
+
+
+
 # ===================== SGA URLs por Carrera =====================
 # URL base para SGA de Electrónica (EEA)
 SGA_BASE_URL=http://localhost/sga4
@@ -79,3 +86,5 @@ SGA_USE_AUTORIZACIONES=false
 # ===================== Reposición de Facturas =====================
 # ID de usuario para reposición de facturas (por defecto: 37)
 REPOSICION_FACTURA_USER_ID=37
+
+CODIGO_AMBIENTE=2
