--- a/src/composer.json
+++ b/src/composer.json
@@ -9,12 +9,13 @@
         "php": "^8.2",
         "doctrine/dbal": "^4.3",
         "dompdf/dompdf": "^2.0",
+        "endroid/qr-code": "^5.0",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.3",
         "laravel/tinker": "^2.10.1",
-        "textalk/websocket": "^1.5",
-        "workerman/workerman": "^4.1",
         "robrichards/xmlseclibs": "^3.1",
-        "endroid/qr-code": "^5.0"
+        "textalk/websocket": "^1.5",
+        "workerman/workerman": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
