--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,10 +44,15 @@
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.6",
+    "@types/body-parser": "^1.19.6",
+    "@types/eslint": "^9.6.1",
     "@types/express": "^5.0.1",
+    "@types/http-errors": "^2.0.5",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
     "@types/qrcode": "^1.5.6",
+    "@types/qs": "^6.14.0",
+    "@types/range-parser": "^1.2.7",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
